<resources>
    <string name="app_name">Multiplication Table</string>
    <string name="questionMark" translatable="false">\?</string>
    <string name="AD_MOB_APP_ID" translatable="false">ca-app-pub-6012847014470005~9976216654</string>
    <string name="AD_INTERSTITIAL_ID" translatable="false">ca-app-pub-6012847014470005/3410808300</string>
    <string name="AD_INTERSTITIAL_2048" translatable="false">ca-app-pub-6012847014470005/4043436226</string>
    <string name="AD_REWARDED_ID_500_COINS" translatable="false">ca-app-pub-6012847014470005/8189960870</string>
    <string name="AD_REWARDED_ID_CONTINUE" translatable="false">ca-app-pub-6012847014470005/9869452590</string>
    <string name="AD_REWARDED_ID_2048" translatable="false">ca-app-pub-6012847014470005/5981515767</string>
    <string name="premiumCoinsCost" translatable="false">50.000</string>
    <string name="premiumCost" translatable="false">1.99$</string>

    <string name="thanks">Thanks!</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplicationLine">Multiplication -</string>
    <string name="divisionLine">Division -</string>
    <string name="additionLine">Addition -</string>
    <string name="subtractionLine">Subtraction -</string>
    <string name="multiplicationTable">Multiplication Table</string>
    <string name="selectNumber">Select the number:</string>
    <string name="startMultiply">Start Multiply</string>
    <string name="startDivision">Start Division</string>
    <string name="training">Training</string>
    <string name="games">Games</string>
    <string name="setDifficulty">Set difficulty:</string>
    <string name="minNumber">min. number</string>
    <string name="maxNumber">max. number</string>
    <string name="selectGame">Select the game:</string>
    <string name="selectOperation">Select the operation:</string>
    <string name="exam">Exam</string>
    <string name="selectDifficulty">Select difficulty:</string>
    <string name="start">Start</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="statistics">Statistics</string>
    <string name="passedExams">Passed exams: 2</string>
    <string name="correctAnswers">Correct answers:</string>
    <string name="avgAnswerTime">Average answer time</string>
    <string name="details">Details</string>
    <string name="removeAds">Remove Ads</string>
    <string name="perfect">Perfect!</string>
    <string name="great">Great!</string>
    <string name="good">Good</string>
    <string name="notBad">Not bad!</string>
    <string name="tryAgain">Try again</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="passed">Passed!</string>
    <string name="failed">Failed</string>
    <string name="gameInput">Input</string>
    <string name="gameSelect">Select</string>
    <string name="gameTrueOrFalse">True or False</string>
    <string name="completedExams">Completed exams:</string>
    <string name="successfullyPassed">Successfully passed:</string>
    <string name="failedExams">Failed exams:</string>
    <string name="correctAnswersPercent">Percentage of correct answers</string>
    <string name="completedExercises">Completed exercises</string>
    <string name="rateTheApp">Rate the App,\nPlease!</string>
    <string name="getPremium">Get Premium Account</string>
    <string name="youArePremiumUser">You are Premium-User</string>
    <string name="disableAds">Disable Ads</string>
    <string name="oneTimePayment">One-time payment (for ever)</string>
    <string name="or">or</string>
    <string name="toastNoCoins">Not enough coins</string>
    <string name="play">Play</string>
    <string name="gameDuel">Duel</string>
    <string name="twoPlayers">2 players</string>
    <string name="finished">Finished</string>
    <string name="redWins">Red Player Won!</string>
    <string name="blueWins">Blue Player Won!</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="bothWon">You both won!</string>
    <string name="goToNextNumber">Go to x</string>
    <string name="coinsReceived">Coins received:</string>
    <string name="getCoins">Get +500</string>
    <string name="notEnoughCoins">not enough coins?</string>

    <string name="newGamesSoon">New games coming soon!</string>
    <string name="game60sec" translatable="false">60 sec</string>
    <string name="best">Best:</string>
    <string name="maximum">Maximum</string>
    <string name="moreOrLess">More or Less</string>

    <string name="wronglyAnswered">You answered wrongly</string>
    <string name="continueQuestion">Continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hardMath">Hard Math</string>
    <string name="catchAnswer">Catch the Answer!</string>

    <string name="name2048" translatable="false">2048</string>
    <string name="scoreTitle">Score:</string>
    <string name="restart">Restart</string>
    <string name="undo">Undo</string>
    <string name="start2048">Start 2048</string>
    <string name="reached2048">You reached 2048!</string>
    <string name="gameOver">Game Over</string>
    <string name="newGame">New Game</string>
    <string name="onlyOneUndo">You can only undo once.</string>

    <string name="tableExample" translatable="false"> 1 x 0 = 0\n
        1 x 1 = 1\n
        1 x 2 = 2\n
        1 x 3 = 3\n
        1 x 4 = 4\n
        1 x 5 = 5\n
        1 x 6 = 6\n
        1 x 7 = 7\n
        1 x 8 = 8\n
        1 x 9 = 9\n
        1 x 10 = 10
    </string>
</resources>