<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="20dp"
    app:cardBackgroundColor="@color/second_background"
    app:cardCornerRadius="15dp"
    tools:context=".presentation.screens.games.game_2048.Continue2048DialogFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTileGoal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/tile_background"
            android:backgroundTint="@color/tile2048"
            android:gravity="center"
            android:text="@string/name2048"
            android:textAlignment="center"
            android:textColor="@color/game_2048_light_text"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/reached2048"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/continueQuestion"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:text="@string/yes"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>