<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.screens.start_exam.StartExamFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/exam"
        android:textColor="@color/main_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSelectOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="60dp"
        android:text="@string/selectOperation"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvSelectOperation">

        <RadioButton
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="x"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="÷"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvSelectDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="80dp"
        android:text="@string/selectDifficulty"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelectOperation" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelectDifficulty">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_radio_button"
            android:button="@null"
            android:gravity="center"
            android:minWidth="120dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:text="@string/easy"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_radio_button"
            android:button="@null"
            android:gravity="center"
            android:minWidth="120dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:text="@string/medium"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_radio_button"
            android:button="@null"
            android:gravity="center"
            android:minWidth="120dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:text="@string/hard"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/main_color"
        android:padding="10dp"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>