<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".presentation.screens.purchase.PurchaseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="end"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="1050" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:contentDescription="@null"
            android:src="@drawable/img_coins" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:src="@drawable/ic_emoji_premium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvGetPremium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/getPremium"
            android:textColor="@color/yellow"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDisableAds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/disableAds"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPremiumInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/oneTimePayment"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_marginTop="40dp"
            android:id="@+id/btnBuyPremium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:cardBackgroundColor="@color/main_color"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/tvPrice"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:text="@string/premiumCost"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvOR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/or"
            android:layout_marginVertical="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btnBuyPremiumByCoins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:cardBackgroundColor="@color/main_color"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:text="@string/premiumCoinsCost"
                    android:textColor="@color/yellow"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/img_coins" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/notEnoughCoins"
            android:layout_marginVertical="10dp"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btnGetCoins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:cardBackgroundColor="@color/orange"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_video_24" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:text="@string/getCoins"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/img_coins" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>